--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
          <div class="item item-1">
           <div>
             <link href="./c_TheVault.css" rel="stylesheet" />
-            <img
+            <!-- <img
                 src="./assets/Front Page.svg"
                 width="173"
                 height="79"
                 class="c_TheVault"
                 draggable="false"
                 unselectable="on"
-             />
+             /> -->
             <div>
                 <link href="./c_u-pdates.css" rel="stylesheet" />
                 <div class="c_u-pdates-text"><p class="c_u-pdates-text1"></p></div>
@@ -223,9 +223,9 @@
                 <div class="c_photo2-instance">
                   <a href="/visual/gallery/">
                 <picture>
-                  <source srcset="./assets/Camera(2).svg" media="(max-width: 760px)">
+                  <source srcset="./assets/Camera(8).svg" media="(max-width: 760px)">
                   <img
-                    src="./assets/Camera(2).svg"
+                    src="./assets/Camera(8).svg"
                     width="176"
                     height="394"
                     class="c_photo2-rectangle"
