--- a/text/translations/hafez-348/index.html
+++ b/text/translations/hafez-348/index.html
@@ -100,7 +100,7 @@
                             <br>
                             That upon the sin of Adam and Eve fire cast
                             <p>&nbsp; </p>
-                            Such joy is there where the beloved is there
+                            The fount of joy is there where the beloved is there
                             <br>
                             I make haste that I may myself be there cast
                             <p>&nbsp; </p>
