--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="/about.css">
     <link rel="shortcut icon" href="/images/Clock(1).svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.typekit.net/gzo2qgp.css">
 </head>
 <body style="background-color: #2a2a2a;"> 
 
@@ -61,9 +62,9 @@
                             font-weight: normal;
                         }
                         h1 {
-                            font-family:'Sansation Light', sans-serif; /* Change to the desired font */
-                            font-size: 1.3em;
-                            font-weight: normal;
+                            font-family:'Inter', sans-serif; /* Change to the desired font */
+                            font-size: 1em;
+                            font-weight: bold;
                         }
                     </style>
                     <p> &nbsp; </p>
@@ -85,7 +86,7 @@
                     <p> Storing and showcasing some of my works and projects I’ve been involved in—mostly artistic. The purpose of this site is to gather everything into one space, a “vault” that will hopefully expand over time.  </p>
                     <style>
                         p {
-                            font-family: 'Inter', sans-serif; /* Change to the desired font */
+                            font-family: 'Inter'; /* Change to the desired font */
                             text-align: left;
                             font-size: 0.9em;
                             line-height: 1.5;
