--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@
                         h1 {
                             font-family:'Inter', sans-serif; /* Change to the desired font */
                             font-size: 1em;
-                            font-weight: bold;
+                            font-weight: lighter;
                         }
                     </style>
                     <p> &nbsp; </p>
