--- a/performance.html
+++ b/performance.html
@@ -11,10 +11,12 @@
         </style>
         <center><h4></h4></center>
         <style>
+ 
+
             small {
                 font-family: 'Lekton', sans-serif; /* Change to the desired font */
                 text-align: right;
-                font-weight:1;
+                font-weight: 1;
                 font-size: 0.75em;
                 padding-inline-start: 0%;
             }
@@ -36,3 +38,11 @@
             
     </div>
 </div> 
+ <style>
+            @font-face {
+                font-family: 'Rajdhani Regular'; /*a name to be used later*/
+                src: url('/Fonts/Rajdhani-Regular.ttf'); /*URL to font*/
+                }
+
+  
+</style>
