--- a/programs.html
+++ b/programs.html
@@ -23,3 +23,9 @@
               
     </div>
 </div> 
+ <style>
+            @font-face {
+                font-family: 'Rajdhani Regular'; /*a name to be used later*/
+                src: url('/Fonts/Rajdhani-Regular.ttf'); /*URL to font*/
+                }
+</style>
