--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <link href="./c_there-isn--much-of.css" rel="stylesheet" />
                 <div class="c_there-isn--much-of-text">
                   <p class="c_there-isn--much-of-text1">
-                     Saam Hamidi 
+                    Saam Hamidi
                   </p>
-                  <p class="c_there-isn--much-of-text2"> Storing and showcasing my works and projects I’ve been involved in — mostly artistic. </p>
+                  <p class="c_there-isn--much-of-text2"> Storing my works and involvements — mostly artistic. </p>
                   <p class="c_there-isn--much-of-text3"></p>
                 </div>
               </div>
