--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <link href="./c_there-isn--much-of.css" rel="stylesheet" />
                 <div class="c_there-isn--much-of-text">
                   <p class="c_there-isn--much-of-text1">
-                    Saam Hamidi
+                    Storing my works and involvements — mostly artistic.
                   </p>
-                  <p class="c_there-isn--much-of-text2"> Storing my works and involvements — mostly artistic. </p>
+                  <p class="c_there-isn--much-of-text2">saam hamidi</p>
                   <p class="c_there-isn--much-of-text3"></p>
                 </div>
               </div>
