--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <p class="c_there-isn--much-of-text1">
                     Storing my works and involvements — mostly artistic.
                   </p>
-                  <p class="c_there-isn--much-of-text2">saam hamidi</p>
+                  <p class="c_there-isn--much-of-text2">Saam Hamidi</p>
                   <p class="c_there-isn--much-of-text3"></p>
                 </div>
               </div>
