--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div>
                 <link href="./c_there-isn--much-of.css" rel="stylesheet" />
                 <div class="c_there-isn--much-of-text">
-                  <p class="c_there-isn--much-of-text1">
+                  <!-- <p class="c_there-isn--much-of-text1">
                     Storing my works and involvements — mostly artistic.
-                  </p>
-                  <p class="c_there-isn--much-of-text2">Saam Hamidi</p>
+                  </p> -->
+                  <p class="c_there-isn--much-of-text2"></p>
                   <p class="c_there-isn--much-of-text3"></p>
                 </div>
               </div>
